--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.3.3",
+    "@ionic-native/camera-preview": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/file": "^4.17.0",
     "@ionic-native/file-transfer": "^4.17.0",
@@ -31,6 +32,7 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "cordova-android": "7.1.1",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera-preview": "0.10.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-transfer": "1.7.1",
@@ -63,7 +65,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-camera-preview": {}
     },
     "platforms": [
       "android"
