--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "cordova-android": "7.1.1",
-    "cordova-plugin-camera": "4.0.3",
+    "cordova-android": "^7.1.1",
+    "cordova-ios": "~4.5.5",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "6.0.1",
-    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -66,6 +67,7 @@
       "cordova-plugin-file": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
