--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "cordova-android": "7.1.1",
+    "cordova-android": "^7.1.1",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-camera-preview": "0.10.0",
     "cordova-plugin-device": "^2.0.2",
@@ -69,6 +70,7 @@
       "cordova-plugin-camera-preview": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
